# llm_train_api

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 20240320_0001_init_schema.py
app/: __init__.py  config.py  database.py  deid.py  dependencies.py  deps.py  logging.py  main.py  models.py  schemas.py  storage.py  utils.py
app/api/: __init__.py  container.py  datasets.py  deid.py  deployments.py  health.py  projects.py  train_config.py  uploads.py
app/api/dataset_upload/: __init__.py
app/api/deid/: __init__.py
app/api/deployment/: __init__.py
app/api/project/: __init__.py
app/api/v1/: router.py
app/api/v1/projects/: models.py  repository.py  router.py  schemas.py  service.py
app/common/: deps.py  utils.py
app/core/: config.py  logging.py  security.py
app/db/: base.py  session.py
app/deid/: __init__.py
app/routers/: training.py
app/services/: jobs.py
app/storage/: __init__.py
app/tests/: conftest.py  test_projects.py
src/api/: __init__.py  datasets.py  deidentify.py  health.py  projects.py  train_configs.py
src/common/: __init__.py
src/db/: __init__.py  base.py  models.py  session.py
src/features/datasets/: api.py
src/features/deid/: __init__.py  api.py  services.py
src/features/deployments/: api.py
src/features/projects/: api.py
src/features/train_configs/: api.py
src/schemas/: __init__.py
src/services/: __init__.py  data_store.py  deidentify_service.py
src/storage/: __init__.py
src/utils/: __init__.py  filesystem.py
tests/: __init__.py  test_app.py  test_training_jobs.py
