[project]
name = "llm-train-api"
version = "0.1.0"
description = "Simple FastAPI service for managing LLM training jobs"
authors = [{name = "Example", email = "example@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

